# spa-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: archive.rs  cache.rs  config.rs  main.rs  server.rs  source.rs
src/server/: proxy.rs
src/source/: archive.rs  http.rs
