[package]
name = "spa-server"
version = "0.1.0"
authors = ["JustinRlle <justinrlle@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.0"
anyhow = "1"
mime_guess = "2"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
isahc = "0.9"
shellexpand = "2"
directories = "3"
dirs = "3"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
dotenv = "0.15"
argh = "0.1"
chrono = "0.4"
num_cpus = "1"
